# Dishwashers

./: LICENSE  README.md  code_1.py  dishwashers.py  draftcode3AB.py  draftcode4AB.py  draftcodeRN.py  main.py  setup.cfg
.github/workflows/: python_test.yml
Drafts/: draftcode2AB.py  draftcode3AB.py
docs/source/: api.rst  conf.py  index.rst  usage.rst
src/example_package/: command_line_interface.py  example.py
tests/: evaltest.py  test_example.py
