[metadata]
name = example-package-GREGASHTON
version = 0.0.1
author = Greg Ashton
author_email = gregory.ashton@rhul.ac.uk
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GregoryAshton/template_project_PH3010_advanced_python
project_urls =
    Bug Tracker = https://github.com/GregoryAshton/template_project_PH3010_advanced_python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    add_one = example_package.command_line_interface:main
